# Codage_de_Huffman

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Codage_de_Huffman  Codage_de_Huffman.cbp  Makefile  README.md  arbre.c  arbre.h  bit.c  bit.h  cmake_install.cmake  couple.c  couple.h  fichier.c  heap.c  heapq.c  heapq.h  huffman.c  huffman.h  main  main.c  noeud.h  noeud_generique.c  noeud_generique.h  test_bin.txt  utils.h
